--- a/src/components/stdservice/s.css
+++ b/src/components/stdservice/s.css
@@ -1,4 +1,5 @@
-.shadow-custom {
+/* .shadow-custom {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .25), 0 3px 10px 5px rgba(0, 0, 0, 0.05) !important;
-  }
-.h :hover{background-color: rgb(91, 127, 180);}
+  } */
+.h :hover{    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, .25), 0 6px 10px 5px rgba(0, 0, 0, 0.05) !important;
+}
